fixed mobile layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -514,8 +514,8 @@ footer {
 
   .container-link {
     position: absolute;
-    bottom: 20px;
-    left: 15px;
+    top: 20px;
+    left: 0px;
     margin: 10px;
     height: 50px;
     width: 80px;
